perf(nitrite): backend-aware sorted reads, document-key identity lookups, Jakarta Data CRUD semantics
Nitrite 5.3.0.

Sorted reads
- Add sorted-read-strategy (AUTO, CURSOR, DATABASE) per datasource.
- AUTO withholds a sorted row bound from the find and applies it while
  reading the cursor for MVSTORE and IN_MEMORY, and leaves it on the find
  for ROCKSDB.
- Keep a bound of zero rows on the find: a cursor bound of zero means
  unbounded, so withholding it would read the whole collection.
- Leave a skip on the find, so a cursor window only ever drops a suffix.
- Hold the withheld bound on the criteria read plan instead of editing the
  find options while the plan is read, so a plan read twice yields the same
  window.

Save semantics
- Resolve save by looking the identity up in the collection rather than by
  testing the identity field for null, per Jakarta Data @Save: an identity
  the store holds behaves as @Update, one it does not behaves as @Insert.
- Partition a save batch into an insert half and an update half, each
  running its own lifecycle events and its own write.
- Return the instance carrying what was written, including a generated
  identity and an initial version, which for an immutable entity is a
  replacement instance rather than the argument.
- Drop the insert-if-absent update option from every save and update path.

Strict insert, update and delete
- insert and insertAll raise EntityExistsException for an identity the
  collection already holds.
- update, updateAll, delete and deleteAll raise OptimisticLockException
  when no document matches, for versioned and unversioned entities alike.
- An entity with no identity is not inserted by update; it reports zero
  affected rows.

Identity storage and lookup
- Write a Long identity into "_id" as well as "id".
- Answer a query whose whole filter is an identity equality from the
  document key, falling back to the identity field when that finds nothing,
  which is the same fallback the write paths make.